# EconomyBot

./: .gitignore  .gitmodules  ActualFuzz.cs  BooruImageProvider.cs  ChatModule.cs  Constants.cs  EconomyBot.csproj  EconomyBot.csproj.DotSettings  EconomyBot.sln  EconomyModule.cs  GuildMusicData.cs  IImageProvider.cs  ImagesModule.cs  JSONParser.cs  Launch.ps1  MusicModule.cs  MusicService.cs  PartyModule.cs  Program.cs  RedditImageProvider.cs  ToxicityHandler.cs  WebhookCache.cs  WilteryHandler.cs  application.yml  bot.db  googletoken  launch.sh  paket.dependencies  paket.references  runtimeconfig.template.json  tokengetter.py
CommandHandlers/: ChatHandler.cs  ChatModule.cs  ChatModuleSlash.cs  ImagesModule.cs  ImagesModuleSlash.cs  MusicCommon.cs  MusicHandler.cs  MusicModule.cs  MusicModuleSlash.cs  MusicQueue.cs
Logging/: Logger.cs
Migrations/: 20230402224758_InitialCreate.Designer.cs  20230402224758_InitialCreate.cs  GuildDBModelSnapshot.cs
Music/: GuildMusicData.cs  MusicQueue.cs  MusicService.cs
Text/: ToxicityHandler.cs  WebhookCache.cs  WilteryHandler.cs
langue/: README.md  pyproject.toml
langue/langue/: cli.py  engine.py  transformations.py
langue/tests/: test_cli.py  test_transformations.py
py/: main.py  pyproject.toml
py/langue/: cli.py  engine.py
py/tests/: test_transformations.py
