[tool.poetry]
name = "langue"
version = "0.1.3"
description = "Language analysis and manpulation subsystem for EconomyBot"
homepage = "https://github.com/Pannoniae/EconomyBot"
authors = ["Pannonie", "mprisznyak"]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Utilities"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
nltk = "^3.8.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
pylint = "^2.15.5"
pytest = "^7.2.0"
pytest-dotenv = "^0.5.2"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
langue = 'langue.cli:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
